force-app/main/default/objects/Contract/fields/A4L_Amendments__c.field-meta.xml
<CustomField>
    <fullName>A4L_Amendments__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <inlineHelpText>Enter the amendments to the agreement for lease that will comprise Condition 11 of the A4L</inlineHelpText>
    <label>A4L Amendments</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>