force-app/main/default/objects/Contract/fields/ABR__c.field-meta.xml
<CustomField>
    <fullName>ABR__c</fullName>
    <formula>IF( Security_Deposit_Total__c  &gt; 0,  Security_Deposit_Total__c , IF(ISPICKVAL( Size_Metric__c , &quot;sq.m&quot;), Notional_Base_Rent__c * Unit_Size__c , Notional_Base_Rent__c  *  Unit_Size_sqft__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>