force-app/main/default/objects/Contract/fields/Access_Date__c.field-meta.xml
<CustomField>
    <fullName>Access_Date__c</fullName>
    <inlineHelpText>Enter the date the tenant can have access to the unit which will appear on the agreement for lease (A4L)</inlineHelpText>
    <label>Access Date</label>
    <type>Date</type>
</CustomField>