force-app/main/default/objects/Contract/fields/Additional_TI__c.field-meta.xml
<CustomField>
    <fullName>Additional_TI__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter any additional incentive to be offered to the tenant over and above the contribution being made to the shop fit or the overall TI contribution if it&apos;s not calculated based on GEA</inlineHelpText>
    <label>Additional TI</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>