force-app/main/default/objects/Contract/fields/Annual_Sales_Uplift_Projection__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Uplift_Projection__c</fullName>
    <inlineHelpText>Enter the annual sales projection uplift expected for this brand, if this is left blank the Village default will be used</inlineHelpText>
    <label>Annual Sales Uplift Projection</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>