force-app/main/default/objects/Contract/fields/Anticipated_LOI_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_LOI_Date__c</fullName>
    <inlineHelpText>If a letter of intent is being used to progress this deal then the anticipated date when this needs to be signed should be entered here</inlineHelpText>
    <label>Anticipated LOI Date</label>
    <type>Date</type>
</CustomField>