force-app/main/default/objects/Contract/fields/Anticipated_Signing_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Signing_Date__c</fullName>
    <inlineHelpText>Enter the date when it is anticipated that the deal will be signed</inlineHelpText>
    <label>Anticipated Signing Date</label>
    <type>Date</type>
</CustomField>