force-app/main/default/objects/Contract/fields/Balance_on_Signing_Lease__c.field-meta.xml
<CustomField>
    <fullName>Balance_on_Signing_Lease__c</fullName>
    <formula>( ( ( ABR__c )  / 12 )  *  Deposit_Period_months__c) -  Deposit_on_Signing_HoT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The deposit amount due on signing the contract/lease</inlineHelpText>
    <label>Balance on Signing Lease</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>