force-app/main/default/objects/Contract/fields/Base_Rent_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Base_Rent_Bill_To__c</fullName>
    <inlineHelpText>Enter the date that Base Rent will be billed to on completion</inlineHelpText>
    <label>Base Rent Bill To</label>
    <type>Date</type>
</CustomField>