force-app/main/default/objects/Contract/fields/Base_Rent_Charge__c.field-meta.xml
<CustomField>
    <fullName>Base_Rent_Charge__c</fullName>
    <formula>( ABR__c  *  CB_Factor__c  )  /   BF_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount of the recurring charge based on the billing frequency</inlineHelpText>
    <label>Base Rent Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>