force-app/main/default/objects/Contract/fields/Base_Rent_Clause__c.field-meta.xml
<CustomField>
    <fullName>Base_Rent_Clause__c</fullName>
    <inlineHelpText>Describe how base rent is to be charged for this deal</inlineHelpText>
    <label>Base Rent Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>