force-app/main/default/objects/Contract/fields/Base_Rent_Days__c.field-meta.xml
<CustomField>
    <fullName>Base_Rent_Days__c</fullName>
    <formula>( Base_Rent_Bill_To__c  -  Base_Rent_Payable_From__c  )  + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Rent Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>