force-app/main/default/objects/Contract/fields/Base_Rent_on_Completion__c.field-meta.xml
<CustomField>
    <fullName>Base_Rent_on_Completion__c</fullName>
    <formula>( (  Base_Rent_Charge__c )  /  Base_Rent_Qtr_Days__c  )  *  Base_Rent_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Base Rent Payable on Completion</inlineHelpText>
    <label>Base Rent on Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>