force-app/main/default/objects/Contract/fields/Base_Rent_Payable_From__c.field-meta.xml
<CustomField>
    <fullName>Base_Rent_Payable_From__c</fullName>
    <inlineHelpText>Select the date the base rent is payable from</inlineHelpText>
    <label>Base Rent Payable From</label>
    <type>Date</type>
</CustomField>