force-app/main/default/objects/Contract/fields/Base_Rent_Qtr_Days__c.field-meta.xml
<CustomField>
    <fullName>Base_Rent_Qtr_Days__c</fullName>
    <formula>( Base_Rent_Bill_To__c  -  ( DATE  ( YEAR ( Base_Rent_Bill_To__c  ) ,( MONTH( Base_Rent_Bill_To__c  ) - 2), 01) ) )  + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Rent Qtr Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>