force-app/main/default/objects/Contract/fields/BF_Factor__c.field-meta.xml
<CustomField>
    <fullName>BF_Factor__c</fullName>
    <formula>IF(ISPICKVAL( Billing_Frequency__c , &quot;Quarterly&quot;) , 4, IF(ISPICKVAL(Billing_Frequency__c, &quot;Monthly&quot;) , 12, 1 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BF Factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>