force-app/main/default/objects/Contract/fields/Brand_Captain__c.field-meta.xml
<CustomField>
    <fullName>Brand_Captain__c</fullName>
    <formula>Opportunity__r.Brand_Captain__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>the VR Brand Captain pulled directly from the Brand Captain Role on the Opportunity Team</inlineHelpText>
    <label>Brand Captain</label>
    <type>Text</type>
</CustomField>