force-app/main/default/objects/Contract/fields/Brand_Estimated_Sales__c.field-meta.xml
<CustomField>
    <fullName>Brand_Estimated_Sales__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the estimated sales that the brand is forecasting for the 1st years trading, if know</inlineHelpText>
    <label>Brand Estimated Sales</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>