force-app/main/default/objects/Contract/fields/Brand_Name_in_Chinese__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name_in_Chinese__c</fullName>
    <formula>Opportunity__r.Brand_Name_in_Chinese__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Brand Name in Chinese to be printed on HoT documents</inlineHelpText>
    <label>Brand Name in Chinese</label>
    <type>Text</type>
</CustomField>