force-app/main/default/objects/Contract/fields/Budget_Open_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Open_Exit_Date__c</fullName>
    <formula>Opportunity__r.Budget_Open_Exit_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this contract is in budget this date is pulled from the corresponding opportunity</inlineHelpText>
    <label>Budget Open/Exit Date</label>
    <type>Date</type>
</CustomField>