force-app/main/default/objects/Contract/fields/CB_Factor__c.field-meta.xml
<CustomField>
    <fullName>CB_Factor__c</fullName>
    <formula>IF(ISPICKVAL( Charge_Basis__c , &quot;Quarterly&quot;) , 4, IF(ISPICKVAL(Charge_Basis__c, &quot;Monthly&quot;) , 12, 1 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CB Factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>