force-app/main/default/objects/Contract/fields/Charge_Basis__c.field-meta.xml
<CustomField>
    <fullName>Charge_Basis__c</fullName>
    <inlineHelpText>Select the basis on which Base Rent and Service Charge have been quoted for this lease; Annual, Quarterly or Monthly</inlineHelpText>
    <label>Charge Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>