force-app/main/default/objects/Contract/fields/Checks__c.field-meta.xml
<CustomField>
    <fullName>Checks__c</fullName>
    <inlineHelpText>Enter the results of any due diligence checking</inlineHelpText>
    <label>Checks</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>