force-app/main/default/objects/Contract/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Enter any commentary that needs to ba called out on the remerchandising tracker</inlineHelpText>
    <label>Comments</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>