force-app/main/default/objects/Contract/fields/Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Address__c</fullName>
    <defaultValue>&quot;TBC&quot;</defaultValue>
    <inlineHelpText>Enter the company address to be used on official and legal documents</inlineHelpText>
    <label>Company Address</label>
    <type>TextArea</type>
</CustomField>