force-app/main/default/objects/Contract/fields/Company_No__c.field-meta.xml
<CustomField>
    <fullName>Company_No__c</fullName>
    <defaultValue>&quot;TBC&quot;</defaultValue>
    <inlineHelpText>Enter the company number of the tenant</inlineHelpText>
    <label>Company No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>