force-app/main/default/objects/Contract/fields/Competition_Clause__c.field-meta.xml
<CustomField>
    <fullName>Competition_Clause__c</fullName>
    <inlineHelpText>Enter the competition clause being used for this lease</inlineHelpText>
    <label>Competition Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>