force-app/main/default/objects/Contract/fields/Competition_Period_months__c.field-meta.xml
<CustomField>
    <fullName>Competition_Period_months__c</fullName>
    <defaultValue>12</defaultValue>
    <inlineHelpText>Enter the number of months that the tenant is prohibitted from opening a competing outlet after termination of this contract/lease</inlineHelpText>
    <label>Competition Period (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>