force-app/main/default/objects/Contract/fields/Contract_Exchange_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Exchange_Date__c</fullName>
    <inlineHelpText>Enter the date on which contract exchange will take or has already taken place</inlineHelpText>
    <label>Contract Exchange Date</label>
    <type>Date</type>
</CustomField>