force-app/main/default/objects/Contract/fields/Contract_Term_years__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_years__c</fullName>
    <formula>ContractTerm  / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lease term expressed in years</inlineHelpText>
    <label>Contract Term (years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>