force-app/main/default/objects/Contract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <inlineHelpText>Select the type of contract you wish to create</inlineHelpText>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lease</fullName>
                <default>true</default>
                <label>Lease</label>
            </value>
            <value>
                <fullName>Licence</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>