force-app/main/default/objects/Contract/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <inlineHelpText>Select the currency that will apply to all financial values associated with this lease</inlineHelpText>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RMB</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>