force-app/main/default/objects/Contract/fields/Days_in_Year__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Year__c</fullName>
    <formula>DATE(YEAR(Insurance_Bill_To__c) ,12,31)  - DATE(YEAR(Insurance_Bill_To__c) ,01,01) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days in the year in which the Insurance Bill to date occurs</inlineHelpText>
    <label>Days in Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>