force-app/main/default/objects/Contract/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <formula>IF( ISBLANK( Opportunity__r.VR_Group_Deal_Link__c ) , &quot;Village Deal&quot;, &quot;Group Deal&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If there is no link to another deal then this is deemed to be a Village deal otherwise it&apos;s a Group deal</inlineHelpText>
    <label>Deal</label>
    <type>Text</type>
</CustomField>