force-app/main/default/objects/Contract/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <formula>TEXT( Opportunity__r.Type )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The type of originating opportunity</inlineHelpText>
    <label>Deal Type</label>
    <type>Text</type>
</CustomField>