force-app/main/default/objects/Contract/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>TEXT(Account.Department__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Department is derived from the account record</inlineHelpText>
    <label>Department</label>
    <type>Text</type>
</CustomField>