force-app/main/default/objects/Contract/fields/Department_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Department_Responsible__c</fullName>
    <inlineHelpText>Enter the name of the department currently responsible for this lease</inlineHelpText>
    <label>Department Responsible</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VR Leasing</fullName>
            </value>
            <value>
                <fullName>VR Legal</fullName>
            </value>
            <value>
                <fullName>VR China Lease</fullName>
            </value>
            <value>
                <fullName>VR China Legal</fullName>
            </value>
            <value>
                <fullName>VR Leasing Agent-HRC</fullName>
            </value>
            <value>
                <fullName>VR Leasing Agent-C&amp;W</fullName>
            </value>
            <value>
                <fullName>VR Law Firm-Hogan Lovells</fullName>
            </value>
            <value>
                <fullName>VR Law Firm-ZhongLun</fullName>
            </value>
            <value>
                <fullName>Brand In-house Legal</fullName>
            </value>
            <value>
                <fullName>Brand Leasing</fullName>
            </value>
            <value>
                <fullName>Brand Leasing Agent</fullName>
            </value>
            <value>
                <fullName>Brand Law Firm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>