force-app/main/default/objects/Contract/fields/Deposit_Clause__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Clause__c</fullName>
    <inlineHelpText>Describe how the deposit is to be charged and collected if applicable</inlineHelpText>
    <label>Deposit Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>