force-app/main/default/objects/Contract/fields/Deposit_on_Signing_HoT__c.field-meta.xml
<CustomField>
    <fullName>Deposit_on_Signing_HoT__c</fullName>
    <formula>( ( (  ABR__c )  / 12 )  *  Deposit_Period_months__c  )  *  Deposit_Payment_Split__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calculated amount of deposit payable on signing the HoT</inlineHelpText>
    <label>Deposit on Signing HoT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>