force-app/main/default/objects/Contract/fields/Deposit_Payment_Split__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Payment_Split__c</fullName>
    <defaultValue>0.50</defaultValue>
    <inlineHelpText>Enter the percentage of the deposit that is payable on signing the HoT with the balance payable on completion</inlineHelpText>
    <label>Deposit Payment Split</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>