force-app/main/default/objects/Contract/fields/Deposit_Period_months__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Period_months__c</fullName>
    <defaultValue>6</defaultValue>
    <inlineHelpText>Enter the number of months of base rent that is to be used to calculate the amount of deposit required</inlineHelpText>
    <label>Deposit Period (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>