force-app/main/default/objects/Contract/fields/Deposit_Status__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Status__c</fullName>
    <inlineHelpText>Use this field to track the request and collection of deposits</inlineHelpText>
    <label>Deposit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Deposit requested</fullName>
            </value>
            <value>
                <fullName>1st Deposit received</fullName>
            </value>
            <value>
                <fullName>2nd Deposit requested</fullName>
            </value>
            <value>
                <fullName>2nd Deposit received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>