force-app/main/default/objects/Contract/fields/Direct_Debit__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit__c</fullName>
    <inlineHelpText>Select Yes or No to indicate whether a Direct Debit is in place</inlineHelpText>
    <label>Direct Debit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>