force-app/main/default/objects/Contract/fields/Distance_Metric__c.field-meta.xml
<CustomField>
    <fullName>Distance_Metric__c</fullName>
    <inlineHelpText>Enter the metric used for distances</inlineHelpText>
    <label>Distance Metric</label>
    <length>15</length>
    <type>Text</type>
</CustomField>