force-app/main/default/objects/Contract/fields/Documentation_Comment__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Comment__c</fullName>
    <inlineHelpText>Enter a brief comment as to where we are in the process and the next step</inlineHelpText>
    <label>Documentation Comment</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>