force-app/main/default/objects/Contract/fields/Documents__c.field-meta.xml
<CustomField>
    <fullName>Documents__c</fullName>
    <defaultValue>&quot;TBA&quot;</defaultValue>
    <inlineHelpText>Enter the list of documents that will accompany the SRF</inlineHelpText>
    <label>Documents</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>