force-app/main/default/objects/Contract/fields/Easements_Clause__c.field-meta.xml
<CustomField>
    <fullName>Easements_Clause__c</fullName>
    <defaultValue>&quot;Not applicable&quot;</defaultValue>
    <inlineHelpText>Enter the detail of the easements clause that will appear in the lease deed</inlineHelpText>
    <label>Easements Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>