force-app/main/default/objects/Contract/fields/Effective_Size__c.field-meta.xml
<CustomField>
    <fullName>Effective_Size__c</fullName>
    <formula>Opportunity__r.Effective_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The effective unit size pulled from the opportunity, either the Unit GEA or the Ideal or Notional size offered to the brand if no unit has been allocated</inlineHelpText>
    <label>Effective Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>