force-app/main/default/objects/Contract/fields/Estimated_Sales__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Sales__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the estimated sales that VR is forecasting for the 1st year&apos;s trading</inlineHelpText>
    <label>VR Estimated Sales</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>