force-app/main/default/objects/Contract/fields/Expected_Open_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Open_Close_Date__c</fullName>
    <formula>Opportunity__r.Expected_Open_Exit_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The expected as opposed to the budgeted  open or exit date for this opportunity</inlineHelpText>
    <label>Expected Open/Close Date</label>
    <type>Date</type>
</CustomField>