force-app/main/default/objects/Contract/fields/First_Financial_Year_End__c.field-meta.xml
<CustomField>
    <fullName>First_Financial_Year_End__c</fullName>
    <inlineHelpText>Enter the 1st financial year end date of the brand during the life time of this contract</inlineHelpText>
    <label>First Financial Year End</label>
    <type>Date</type>
</CustomField>