force-app/main/default/objects/Contract/fields/Fit_Out_Clause__c.field-meta.xml
<CustomField>
    <fullName>Fit_Out_Clause__c</fullName>
    <inlineHelpText>Enter the details of the arrangements for fit out</inlineHelpText>
    <label>Fit Out Clause</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>