force-app/main/default/objects/Contract/fields/Fitting_out_Period_days__c.field-meta.xml
<CustomField>
    <fullName>Fitting_out_Period_days__c</fullName>
    <defaultValue>60</defaultValue>
    <inlineHelpText>Enter the number of days agreed to perform the shop fit</inlineHelpText>
    <label>Fitting out Period (days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>