force-app/main/default/objects/Contract/fields/Fitting_Out_Period_weeks__c.field-meta.xml
<CustomField>
    <fullName>Fitting_Out_Period_weeks__c</fullName>
    <inlineHelpText>Enter the number of weeks allowed for Shop Fit</inlineHelpText>
    <label>Fitting Out Period (weeks)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>