force-app/main/default/objects/Contract/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <formula>TEXT(Billing_Frequency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Copy of the billing frequency</inlineHelpText>
    <label>Frequency</label>
    <type>Text</type>
</CustomField>