force-app/main/default/objects/Contract/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <formula>TEXT( Account.Gender_Classification__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gender is derived from the account record</inlineHelpText>
    <label>Gender</label>
    <type>Text</type>
</CustomField>