force-app/main/default/objects/Contract/fields/Guarantee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Guarantee_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the amount the tenant guarantor is putting up as a guarantee for this deal</inlineHelpText>
    <label>Guarantee Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>