force-app/main/default/objects/Contract/fields/Guarantee_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Guarantee_Expiry_Date__c</fullName>
    <inlineHelpText>Enter the expiry date of the guarantee or select from the calendar pop-up</inlineHelpText>
    <label>Guarantee Expiry Date</label>
    <type>Date</type>
</CustomField>