force-app/main/default/objects/Contract/fields/Guarantor_Nominee__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Nominee__c</fullName>
    <defaultValue>&quot;TBC&quot;</defaultValue>
    <inlineHelpText>The individual nominated by the guarantor with the power to sign official documents</inlineHelpText>
    <label>Guarantor Nominee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>