force-app/main/default/objects/Contract/fields/History__c.field-meta.xml
<CustomField>
    <fullName>History__c</fullName>
    <defaultValue>&quot;TBA&quot;</defaultValue>
    <inlineHelpText>Enter the transaction history which describes the rationale or justification behind the deal for use on the SRF</inlineHelpText>
    <label>History</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>