force-app/main/default/objects/Contract/fields/Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Image_Link__c</fullName>
    <inlineHelpText>Enter the link to the image of the Non Compete Map you wish to use</inlineHelpText>
    <label>Non Compete Map Link</label>
    <length>50</length>
    <type>Text</type>
</CustomField>