force-app/main/default/objects/Contract/fields/Image_Link_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Image_Link_Prefix__c</fullName>
    <formula>&quot;https://c.cs4.content.force.com/servlet/servlet.FileDownload?&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Standard prefix to the Document Library for Village Images</inlineHelpText>
    <label>Image Link Prefix</label>
    <type>Text</type>
</CustomField>