force-app/main/default/objects/Contract/fields/Income_Projection__c.field-meta.xml
<CustomField>
    <fullName>Income_Projection__c</fullName>
    <inlineHelpText>Enter the projected annual income for the lease</inlineHelpText>
    <label>Income Projection</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>