force-app/main/default/objects/Contract/fields/Income_Rating__c.field-meta.xml
<CustomField>
    <fullName>Income_Rating__c</fullName>
    <formula>Opportunity__r.Income_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Income Rating is derived from the opportunity record</inlineHelpText>
    <label>Income Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>