force-app/main/default/objects/Contract/fields/Initial_Marketing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Initial_Marketing_Fee__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the amount of Initial Marketing Fee required</inlineHelpText>
    <label>Initial Marketing Fee</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>