force-app/main/default/objects/Contract/fields/Initial_Marketing_Fee_Clause__c.field-meta.xml
<CustomField>
    <fullName>Initial_Marketing_Fee_Clause__c</fullName>
    <inlineHelpText>Enter the details of the Initial Marketing Fee if applicable</inlineHelpText>
    <label>Initial Marketing Fee Clause</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>