force-app/main/default/objects/Contract/fields/Insurance_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Bill_To__c</fullName>
    <inlineHelpText>Enter the date that insurance will be billed to on completion</inlineHelpText>
    <label>Insurance Bill To</label>
    <type>Date</type>
</CustomField>