force-app/main/default/objects/Contract/fields/Insurance_Days__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Days__c</fullName>
    <formula>(  Insurance_Bill_To__c  -  Insurance_Payable_From__c  )  + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>