force-app/main/default/objects/Contract/fields/Insurance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Fee__c</fullName>
    <formula>Village__r.Std_Insurance_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The standard rate of insurance for this village per village metric</inlineHelpText>
    <label>Insurance Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>