force-app/main/default/objects/Contract/fields/Insurance_on_Completion__c.field-meta.xml
<CustomField>
    <fullName>Insurance_on_Completion__c</fullName>
    <formula>IF(ISPICKVAL( Size_Metric__c , &quot;sq.m&quot;),    ( ( Village__r.Std_Insurance_Fee__c  * Size_sqm__c ) /  Days_in_Year__c  )  *  Insurance_Days__c   ,    ( ( Village__r.Std_Insurance_Fee__c  * Size_sqft__c )  /  Days_in_Year__c   ) *  Insurance_Days__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Insurane amount payable on completion</inlineHelpText>
    <label>Insurance on Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>