force-app/main/default/objects/Contract/fields/Insurance_Payable_From__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Payable_From__c</fullName>
    <inlineHelpText>Select the date that the Insurance Premium is payable from</inlineHelpText>
    <label>Insurance Payable From</label>
    <type>Date</type>
</CustomField>