force-app/main/default/objects/Contract/fields/Landlord__c.field-meta.xml
<CustomField>
    <fullName>Landlord__c</fullName>
    <inlineHelpText>Select the legal entity who will be the landlord for this lease</inlineHelpText>
    <label>Landlord</label>
    <length>255</length>
    <type>Text</type>
</CustomField>