force-app/main/default/objects/Contract/fields/Landlords_Break_Rights__c.field-meta.xml
<CustomField>
    <fullName>Landlords_Break_Rights__c</fullName>
    <inlineHelpText>Enter the details of the Landlords break rights if applicable</inlineHelpText>
    <label>Landlords Break Rights</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>