force-app/main/default/objects/Contract/fields/Landlords_Contribution_Clause__c.field-meta.xml
<CustomField>
    <fullName>Landlords_Contribution_Clause__c</fullName>
    <inlineHelpText>Describe the nature of the Landlords contribution towards the Tenants shop fit or other Tenant Incentive</inlineHelpText>
    <label>Landlords Contribution Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>