force-app/main/default/objects/Contract/fields/Landlords_Relocation_Rights__c.field-meta.xml
<CustomField>
    <fullName>Landlords_Relocation_Rights__c</fullName>
    <inlineHelpText>Describe Landlords reloction rights if applicable</inlineHelpText>
    <label>Landlords Relocation Rights</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>