force-app/main/default/objects/Contract/fields/Lead_Negotiator__c.field-meta.xml
<CustomField>
    <fullName>Lead_Negotiator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the principal VR contact resposible for this lease</inlineHelpText>
    <label>Lead Negotiator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>