force-app/main/default/objects/Contract/fields/Lead_Negotiator_Brand__c.field-meta.xml
<CustomField>
    <fullName>Lead_Negotiator_Brand__c</fullName>
    <formula>Opportunity__r.Lead_Negotiator_Brand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lead negotiator and Primary contact pulled directly from the role on Contact Role on the Opportunity</inlineHelpText>
    <label>Lead Negotiator Brand</label>
    <type>Text</type>
</CustomField>